# zbar-cmake

./: CMakeLists.txt
include/: config.h.in
